<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/transposeUp"
        android:title="@string/notesTransposeUp" 
        android:contentDescription="@string/notesTransposeUpDetail"
        android:showAsAction="always|withText"/>
    <item 
        android:id="@+id/transposeDown"
        android:title="@string/notesTransposeDown" 
        android:contentDescription="@string/notesTransposeDownDetail"
        android:showAsAction="always|withText"/>
    <item 
        android:id="@+id/cut"
        android:icon="@drawable/ic_menu_cut"
        android:title="@string/notesCut" 
        android:contentDescription="@string/notesCutDetail"
        android:showAsAction="always|withText"/>
    <item 
        android:id="@+id/copy"
        android:icon="@drawable/ic_menu_copy"
        android:title="@string/notesCopy" 
        android:contentDescription="@string/notesCopyDetail"
        android:showAsAction="always|withText"/>
</menu>
